tests/baselines/reference/optionalSetterParam.errors.txt
tests/cases/compiler/optionalSetterParam.ts(3,25): error TS1051: A 'set' accessor cannot have an optional parameter.


==== tests/cases/compiler/optionalSetterParam.ts (1 errors) ====
    class foo {
    
        public set bar(param?:any) { }
                            ~
!!! error TS1051: A 'set' accessor cannot have an optional parameter.
    }
    